deploy/manifests/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: cms
  labels:
    app: app
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: ${ssl_certificate}
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443, 80"
spec:
  type: LoadBalancer
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 443
      targetPort: 80
      name: app-port
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: app-port-2
