deploy/manifests/mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cms
  name: db-deployment
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: mariadb:latest
        ports:
        - containerPort: ${db_port_d}
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: cms
  labels:
    app: db
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: ${db_port_d}
      targetPort: ${db_port_d}
      name: db-port
