deploy/manifests/services.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: cms
  labels:
    app: app
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: cms
  labels:
    app: db
spec:
  selector:
    app: db
  ports:
    - port: ${db_port}
